--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,28 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.7.4", features = ["macros"] }
+bytes = "1.4.0"
+mime = "0.3.17"
+tower = { version = "0.4.13" }
+tokio = { version = "1.28.0", features = ["full"] }
+validator = { version = "0.16.0", features = ["derive"] }
+axum-extra = { version = "0.9.2", features = ["typed-header", "multipart"] }
+futures-util = "0.3.28"
+jsonwebtoken = { version = "9.2.0" }
+
+bb8 = "0.8.0"
+diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
+
+toml = "0.8.1"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.104"
+serde_urlencoded = "0.7.1"
+
+chrono = "0.4.24"
+if-addrs = "0.11.0"# IP 地址查看库
+itertools = "0.12.0"
+once_cell = "1.17.1"
+derive_more = "0.99.17"
+color-string = "0.1.2"
+percent-encoding = "2.2.0"# URI 编码库
