--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["multipart"]
+multipart = ["axum-extra/multipart", "tower-http/limit"]
+
 [dependencies]
 axum = { version = "0.7.4", features = ["macros"] }
 bytes = "1.4.0"
 mime = "0.3.17"
 tower = { version = "0.4.13" }
+tower-http = { version = "0.5.0", features = ["limit"] }
 tokio = { version = "1.28.0", features = ["full"] }
 validator = { version = "0.16.0", features = ["derive"] }
 axum-extra = { version = "0.9.2", features = ["typed-header", "multipart"] }
@@ -25,6 +30,7 @@ serde_json = "1.0.104"
 serde_urlencoded = "0.7.1"
 
 chrono = "0.4.24"
+anyhow = "1.0.80"
 if-addrs = "0.11.0"# IP 地址查看库
 itertools = "0.12.0"
 once_cell = "1.17.1"
