--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ bb8 = "0.8.0"
 diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 
 toml = "0.8.1"
-serde = { version = "1.0.160", features = ["derive"] }
+serde = { version = "1.0.160", features = ["derive", "rc"] }
 serde_json = "1.0.104"
 serde_urlencoded = "0.7.1"
 
