--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,23 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["multipart"]
+default = ["database"]
 multipart = ["axum-extra/multipart", "tower-http/limit"]
+database = ["diesel-async/postgres", "diesel-async/bb8"]
 
 [dependencies]
 axum = { version = "0.7.4", features = ["macros"] }
 bytes = "1.4.0"
 mime = "0.3.17"
 tower = { version = "0.4.13" }
-tower-http = { version = "0.5.0", features = ["limit"] }
+tower-http = { version = "0.5.0", features = ["limit", "fs"] }
 tokio = { version = "1.28.0", features = ["full"] }
-validator = { version = "0.16.0", features = ["derive"] }
+validator = { version = "0.17.0", features = ["derive"] }
 axum-extra = { version = "0.9.2", features = ["typed-header", "multipart"] }
 futures-util = "0.3.28"
 jsonwebtoken = { version = "9.2.0" }
 
 bb8 = "0.8.0"
-diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
+diesel-async = { version = "0.4.1" }
 
 toml = "0.8.1"
 serde = { version = "1.0.160", features = ["derive", "rc"] }
@@ -37,3 +38,6 @@ once_cell = "1.17.1"
 derive_more = "0.99.17"
 color-string = "0.1.2"
 percent-encoding = "2.2.0"# URI 编码库
+
+[profile.release]
+#lto = true
