--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,12 @@
 addr = "0.0.0.0:3000"
 protocol = "http"
 
+[database]
+database = "axum-template"
+hostname = "127.0.0.1"
+username = "postgres"
+password = "123456"
+
 [logger]
 path = "logs"
 # 每天第一个请求进来时更新
