fix: 修改配置说明

--- a/config.toml
+++ b/config.toml
@@ -10,12 +10,12 @@ password = "123456"
 
 [logger]
 logo = "[AXUM]"
-color = true        # 是否染色
-stdout = true       # 是否输出到终端
-file = true         # 是否写入文件
 path = "logs"       # 日志路径
-name = "%y%m%d.log" # 日志文件每天首次请求更新
-#delete = 1 # 定期删除(天)
+name = "%y%m%d.log" # 日志文件
+file = true         # 写入文件
+color = true        # 是否染色
+stdout = true       # 写入终端
+#delete = 1         # 定期删除(天)
 time = "%y-%m-%d %H:%M:%S%.3f" # 时间显示格式
 
 [jwt]
